prepare and bronze notebooks

--- a/databricks.yml
+++ b/databricks.yml
@@ -1,7 +1,5 @@
-# This is a Databricks asset bundle definition for kingfisher_wells.
-# See https://docs.databricks.com/dev-tools/bundles/index.html for documentation.
 bundle:
-  name: kingfisher_wells
+  name: kingfisher-wells
   uuid: ea1cda47-3203-4319-96b8-7cc0912aff35
 
 artifacts:
@@ -13,23 +11,34 @@ include:
   - resources/*.yml
   - resources/*/*.yml
 
+variables:
+  main_job_id:
+    description: "Main job ID for the application"
+  well_job_id:
+    description: "Well job ID for the application"
+  app_name_suffix:
+    description: "Suffix for app name based on environment"
+
 targets:
   dev:
-    # The default target uses 'mode: development' to create a development copy.
-    # - Deployed resources get prefixed with '[dev my_user_name]'
-    # - Any job schedules and triggers are paused by default.
-    # See also https://docs.databricks.com/dev-tools/bundles/deployment-modes.html.
     mode: development
     default: true
     workspace:
       host: https://dbc-6841fdbc-f68b.cloud.databricks.com
+    variables:
+      main_job_id: "${resources.jobs.main_job.id}"
+      well_job_id: "${resources.jobs.well_job.id}"
+      app_name_suffix: "-dev"
 
   prod:
     mode: production
     workspace:
       host: https://dbc-6841fdbc-f68b.cloud.databricks.com
-      # We explicitly deploy to /Workspace/Users/bryan@purr.io to make sure we only have a single copy.
-      root_path: /Workspace/Users/bryan@purr.io/.bundle/${bundle.name}/${bundle.target}
+      root_path: /Workspace/Users/${workspace.current_user.userName}/.bundle/${bundle.name}/${bundle.target}
+    variables:
+      main_job_id: "${resources.jobs.main_job.id}"
+      well_job_id: "${resources.jobs.well_job.id}"
+      app_name_suffix: "-prod"
     permissions:
-      - user_name: bryan@purr.io
+      - user_name: ${workspace.current_user.userName}
         level: CAN_MANAGE
