--- a/databricks.yml
+++ b/databricks.yml
@@ -1,23 +1,12 @@
 bundle:
-  name: kingfisher-wells
-  uuid: ea1cda47-3203-4319-96b8-7cc0912aff35
+  name: kingfisher-wells-streamlit
 
-artifacts:
-  python_artifact:
-    type: whl
-    build: uv build --wheel
-
-include:
-  - resources/*.yml
-  - resources/*/*.yml
-
-variables:
-  main_job_id:
-    description: "Main job ID for the application"
-  well_job_id:
-    description: "Well job ID for the application"
-  app_name_suffix:
-    description: "Suffix for app name based on environment"
+resources:
+  apps:
+    kingfisher_streamlit_app:
+      name: kingfisher-streamlit-app
+      source_code_path: src/app
+      description: "Kingfisher County surface well comparison app (Streamlit)"
 
 targets:
   dev:
@@ -25,20 +14,9 @@ targets:
     default: true
     workspace:
       host: https://dbc-6841fdbc-f68b.cloud.databricks.com
-    variables:
-      main_job_id: "${resources.jobs.main_job.id}"
-      well_job_id: "${resources.jobs.well_job.id}"
-      app_name_suffix: "-dev"
 
   prod:
     mode: production
     workspace:
       host: https://dbc-6841fdbc-f68b.cloud.databricks.com
       root_path: /Workspace/Users/${workspace.current_user.userName}/.bundle/${bundle.name}/${bundle.target}
-    variables:
-      main_job_id: "${resources.jobs.main_job.id}"
-      well_job_id: "${resources.jobs.well_job.id}"
-      app_name_suffix: "-prod"
-    permissions:
-      - user_name: ${workspace.current_user.userName}
-        level: CAN_MANAGE
