--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
 
       - name: Run Databricks Job (kingfisher_wells_full_medallion)
-        run: databricks jobs run-now --job-id ${{ steps.jobid.outputs.job_id }}
+        run: databricks jobs run-now ${{ steps.jobid.outputs.job_id }}
         env:
           DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
