--- a/databricks.yml
+++ b/databricks.yml
@@ -14,6 +14,7 @@ targets:
     default: true
     workspace:
       host: https://dbc-6841fdbc-f68b.cloud.databricks.com
+      root_path: /Workspace/Users/${workspace.current_user.userName}/.bundle/${bundle.name}/${bundle.target}
 
   prod:
     mode: production
