--- a/src/app/app.yml
+++ b/src/app/app.yml
@@ -5,7 +5,7 @@ command:
 env:
   - name: DATABRICKS_HOST
     value: https://dbc-6841fdbc-f68b.cloud.databricks.com
-  - name: DATABRICKS_TOKEN
-    valueFrom: streamlit-app
+  # - name: DATABRICKS_TOKEN
+  #   valueFrom: streamlit-app
   - name: DATABRICKS_CLUSTER_ID
     value: 0724-164325-jc3o20pd
